--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,11 @@
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
+; Adapt this to your setup. Comment the following two lines for initial flashing
 upload_protocol = espota
 upload_port = 10.0.0.6
+; Adapt this to your setup. Uncomment this for initial flashing
+;upload_port = COM9
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	pierremolinaro/ACAN2515@^2.0.6
