--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@
 */arduino_secrets.h
 *arduino_secrets.cpp
 */arduino_secrets.cpp
-*scratchpad.txt
-*/scratchpad.txt
+*scratchpad.md
+*/scratchpad.md
