--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,6 @@ upload_port = 10.0.0.6
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	pierremolinaro/ACAN2515@^2.0.6
-	m5ez/ezTime@^0.8.3
+	ropg/ezTime@^0.8.3
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
