--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:az-delivery-devkit-v4]
+[env:esp32dev]
 platform = espressif32
-board = az-delivery-devkit-v4
+board = esp32dev
 framework = arduino
-upload_protocol = espota
-upload_port = 10.0.0.6
+#upload_protocol = espota
+#upload_port = 10.0.0.6
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	pierremolinaro/ACAN2515@^2.0.6
