Prepare for JSON delivery of MQTT topics

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,10 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-;upload_protocol = espota
-;upload_port = 10.0.0.6
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	pierremolinaro/ACAN2515@^2.0.6
 	ropg/ezTime@^0.8.3
 	paulstoffregen/OneWire@^2.3.5
-	milesburton/DallasTemperature@^3.9.1	
+	milesburton/DallasTemperature@^3.9.1
+	bblanchon/ArduinoJson@^6.19.4
