--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+upload_protocol = espota
+upload_port = 10.0.0.6
+build_flags = -D MQTT_MAX_PACKET_SIZE=1024
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	pierremolinaro/ACAN2515@^2.0.6
