--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = esp32dev
 framework = arduino
 ;upload_protocol = espota
 ;upload_port = 10.0.0.6
+upload_speed = 921600
 build_flags = -D MQTT_MAX_PACKET_SIZE=1024
 board_build.partitions = min_spiffs.csv
 lib_deps = 
