Fix Canbus Init

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,10 @@ framework = arduino
 ;upload_protocol = espota
 ;upload_port = 10.0.0.6
 upload_speed = 921600
-build_flags = -D MQTT_MAX_PACKET_SIZE=1024
+build_flags = 
+	-D MCP2515_INT=17 
+	-D MCP2515_CS=5
+	-D MQTT_MAX_PACKET_SIZE=1024 
 board_build.partitions = min_spiffs.csv
 lib_deps = 
 	knolleary/PubSubClient@^2.8
@@ -31,7 +34,10 @@ board = esp32dev
 framework = arduino
 upload_protocol = espota
 upload_port = 10.0.0.6
-build_flags = -D MQTT_MAX_PACKET_SIZE=1024
+build_flags =
+	-D MCP2515_INT=17 
+	-D MCP2515_CS=5
+	-D MQTT_MAX_PACKET_SIZE=1024 
 board_build.partitions = min_spiffs.csv
 lib_deps = 
 	knolleary/PubSubClient@^2.8
