CFG CHANGE! Optimize / Fix Can IDs
Use configuration values for transmission, restrict message payload the the bare minimum, refactor wait-check (last message sent or received by heating)

--- a/assets/Templates/Configurations/configuration.json
+++ b/assets/Templates/Configurations/configuration.json
@@ -56,7 +56,9 @@
                 "Pump": "0x20A",
                 "Season": "0x20C",
                 "Operation": "0x250",
-                "Power": "0x251"
+                "Power": "0x251",
+                "Mode": "0x258",
+                "Economy": "0x253"
             },
             "HotWater": {
                 "SetpointTemperature": "0x203",
