--- a/platformio.ini
+++ b/platformio.ini
@@ -46,3 +46,13 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
 	bblanchon/ArduinoJson@^6.19.4
+
+[env:esp32USB0]
+platform = ${env:esp32dev.platform} 
+board = ${env:esp32dev.board} 
+framework = ${env:esp32dev.framework} 
+;upload_protocol = espota
+upload_port = /dev/ttyUSB0
+build_flags = ${env:esp32dev.build_flags} 
+board_build.partitions = ${env:esp32dev.board_build.partitions} 
+lib_deps = ${env:esp32dev.lib_deps} 
