Simplify Platform.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,12 +12,11 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-;upload_protocol = espota
-;upload_port = 10.0.0.6
 upload_speed = 921600
 build_flags = 
 	-D MCP2515_INT=17 
 	-D MCP2515_CS=5
+	-D MUTE_MQTT=1
 	-D MQTT_MAX_PACKET_SIZE=1024 
 board_build.partitions = min_spiffs.csv
 lib_deps = 
@@ -29,23 +28,14 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 
 [env:esp32OTA]
-platform = espressif32
-board = esp32dev
-framework = arduino
+platform = ${env:esp32dev.platform}
+board = ${env:esp32dev.board}
+framework = ${env:esp32dev.framework}
 upload_protocol = espota
 upload_port = 10.0.0.6
-build_flags =
-	-D MCP2515_INT=17 
-	-D MCP2515_CS=5
-	-D MQTT_MAX_PACKET_SIZE=1024 
-board_build.partitions = min_spiffs.csv
-lib_deps = 
-	knolleary/PubSubClient@^2.8
-	pierremolinaro/ACAN2515@^2.0.6
-	ropg/ezTime@^0.8.3
-	paulstoffregen/OneWire@^2.3.5
-	milesburton/DallasTemperature@^3.9.1
-	bblanchon/ArduinoJson@^6.19.4
+build_flags = ${env:esp32dev.build_flags} 
+board_build.partitions = ${env:esp32dev.board_build.partitions} 
+lib_deps = ${env:esp32dev.lib_deps}
 
 [env:esp32USB0]
 platform = ${env:esp32dev.platform} 
