--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:development]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -27,22 +27,42 @@ lib_deps =
 	milesburton/DallasTemperature@^3.9.1
 	bblanchon/ArduinoJson@^6.19.4
 
-[env:esp32OTA]
-platform = ${env:esp32dev.platform}
-board = ${env:esp32dev.board}
-framework = ${env:esp32dev.framework}
+[env:development_ota]
+platform = ${env:development.platform}
+board = ${env:development.board}
+framework = ${env:development.framework}
 upload_protocol = espota
 upload_port = 10.0.0.6
-build_flags = ${env:esp32dev.build_flags} 
-board_build.partitions = ${env:esp32dev.board_build.partitions} 
-lib_deps = ${env:esp32dev.lib_deps}
+build_flags = ${env:development.build_flags} 
+board_build.partitions = ${env:development.board_build.partitions} 
+lib_deps = ${env:development.lib_deps}
 
-[env:esp32USB0]
-platform = ${env:esp32dev.platform} 
-board = ${env:esp32dev.board} 
-framework = ${env:esp32dev.framework} 
-;upload_protocol = espota
+[env:development_usb]
+platform = ${env:development.platform} 
+board = ${env:development.board} 
+framework = ${env:development.framework} 
 upload_port = /dev/ttyUSB0
-build_flags = ${env:esp32dev.build_flags} 
-board_build.partitions = ${env:esp32dev.board_build.partitions} 
-lib_deps = ${env:esp32dev.lib_deps} 
+build_flags = ${env:development.build_flags} 
+board_build.partitions = ${env:development.board_build.partitions} 
+lib_deps = ${env:development.lib_deps} 
+
+[env:production]
+platform = ${env:development.platform}
+board = ${env:development.board}
+framework = ${env:development.framework}
+build_flags = 
+	-D MCP2515_INT=17 
+	-D MCP2515_CS=5
+	-D MQTT_MAX_PACKET_SIZE=1024 
+board_build.partitions = ${env:development.board_build.partitions} 
+lib_deps = ${env:development.lib_deps}
+
+[env:production_ota]
+platform = ${env:development.platform}
+board = ${env:development.board}
+framework = ${env:development.framework}
+upload_protocol = espota
+upload_port = 10.0.0.6
+build_flags = ${env:production.framework}
+board_build.partitions = ${env:development.board_build.partitions} 
+lib_deps = ${env:development.lib_deps}
