--- a/platformio.ini
+++ b/platformio.ini
@@ -14,10 +14,12 @@ board = esp32dev
 framework = arduino
 upload_speed = 921600
 build_flags = 
-	-D MCP2515_INT=17 
+	-D CONFIG_ARDUHAL_LOG_COLORS=1
+	-D CORE_DEBUG_LEVEL=5
+	-D MCP2515_INT=17
 	-D MCP2515_CS=5
 	-D MUTE_MQTT=1
-	-D MQTT_MAX_PACKET_SIZE=1024 
+	-D MQTT_MAX_PACKET_SIZE=1024
 board_build.partitions = min_spiffs.csv
 lib_deps = 
 	knolleary/PubSubClient@^2.8
@@ -26,6 +28,7 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
 	bblanchon/ArduinoJson@^6.19.4
+	robtillaart/ANSI@^0.1.6
 
 [env:development_ota]
 platform = ${env:development.platform}
@@ -33,36 +36,58 @@ board = ${env:development.board}
 framework = ${env:development.framework}
 upload_protocol = espota
 upload_port = 10.0.0.6
-build_flags = ${env:development.build_flags} 
-board_build.partitions = ${env:development.board_build.partitions} 
-lib_deps = ${env:development.lib_deps}
+build_flags = ${env:development.build_flags}
+board_build.partitions = ${env:development.board_build.partitions}
+lib_deps = 
+	${env:development.lib_deps}
+	robtillaart/ANSI@^0.1.6
 
 [env:development_usb]
-platform = ${env:development.platform} 
-board = ${env:development.board} 
-framework = ${env:development.framework} 
+platform = ${env:development.platform}
+board = ${env:development.board}
+framework = ${env:development.framework}
 upload_port = /dev/ttyUSB0
-build_flags = ${env:development.build_flags} 
-board_build.partitions = ${env:development.board_build.partitions} 
-lib_deps = ${env:development.lib_deps} 
+build_flags = ${env:development.build_flags}
+board_build.partitions = ${env:development.board_build.partitions}
+lib_deps = 
+	${env:development.lib_deps}
+	robtillaart/ANSI@^0.1.6
 
 [env:production]
 platform = ${env:development.platform}
 board = ${env:development.board}
 framework = ${env:development.framework}
+monitor_speed = 115200
+monitor_raw = yes
 build_flags = 
-	-D MCP2515_INT=17 
+	-D CONFIG_ARDUHAL_LOG_COLORS=1
+	-D CORE_DEBUG_LEVEL=5
+	-D MCP2515_INT=17
 	-D MCP2515_CS=5
-	-D MQTT_MAX_PACKET_SIZE=1024 
-board_build.partitions = ${env:development.board_build.partitions} 
-lib_deps = ${env:development.lib_deps}
+	-D MUTE_MQTT=0
+	-D MQTT_MAX_PACKET_SIZE=1024
+board_build.partitions = ${env:development.board_build.partitions}
+lib_deps = 
+	${env:development.lib_deps}
+	robtillaart/ANSI@^0.1.6
 
 [env:production_ota]
-platform = ${env:development.platform}
-board = ${env:development.board}
-framework = ${env:development.framework}
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_flags = 
+	-D MCP2515_INT=17
+	-D MCP2515_CS=5
+	-D MUTE_MQTT=0
+	-D MQTT_MAX_PACKET_SIZE=1024
+board_build.partitions = min_spiffs.csv
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	pierremolinaro/ACAN2515@^2.0.6
+	ropg/ezTime@^0.8.3
+	paulstoffregen/OneWire@^2.3.5
+	milesburton/DallasTemperature@^3.9.1
+	bblanchon/ArduinoJson@^6.19.4
+	robtillaart/ANSI@^0.1.6
 upload_protocol = espota
-upload_port = 10.0.0.6
-build_flags = ${env:production.framework}
-board_build.partitions = ${env:development.board_build.partitions} 
-lib_deps = ${env:development.lib_deps}
+upload_port = 10.0.1.52
