--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_speed = 921600
+monitor_speed = 115200
+monitor_raw = yes
 build_flags = 
 	-D MCP2515_INT=17 
 	-D MCP2515_CS=5
@@ -50,6 +52,8 @@ lib_deps = ${env:development.lib_deps}
 platform = ${env:development.platform}
 board = ${env:development.board}
 framework = ${env:development.framework}
+monitor_speed = 115200
+monitor_raw = yes
 build_flags = 
 	-D MCP2515_INT=17 
 	-D MCP2515_CS=5
