--- a/platformio.ini
+++ b/platformio.ini
@@ -67,6 +67,6 @@ board = ${env:development.board}
 framework = ${env:development.framework}
 upload_protocol = espota
 upload_port = 10.0.0.6
-build_flags = ${env:production.framework}
+build_flags = ${env:production.build_flags}
 board_build.partitions = ${env:development.board_build.partitions} 
 lib_deps = ${env:development.lib_deps}
