CONF CHANGE: Boost & Fastheatup
Adds two additional configurable topics in order to properly trigger these features. This is the same behaviour as it was in the main branch but now the topics can be configured

--- a/assets/Templates/Configurations/configuration.json
+++ b/assets/Templates/Configurations/configuration.json
@@ -16,7 +16,9 @@
             "WaterParameters": "cerasmarter/water/parameters",
             "AuxilaryParameters": "cerasmarter/auxilary/values",
             "Status": "cerasmarter/status",
-            "StatusRequest": "cerasmarter/status/get"
+            "StatusRequest": "cerasmarter/status/get",
+            "Boost": "cerasmarter/boost/set",
+            "FastHeatup": "cerasmarter/fastheatup/set"
         }
     },
     "Features": {
