--- a/platformio.ini
+++ b/platformio.ini
@@ -7,20 +7,17 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+description = "Project for controlling Junkers heating systems equipped with BM1 and BM2 bus modules"
+default_envs = development, production
 
-[env:development]
+[env]
 platform = espressif32
 board = esp32dev
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 monitor_raw = yes
-build_flags = 
-	-D MCP2515_INT=17 
-	-D MCP2515_CS=5
-	-D MUTE_MQTT=1
-	-D MQTT_MAX_PACKET_SIZE=1024 
-board_build.partitions = min_spiffs.csv
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	pierremolinaro/ACAN2515@^2.0.6
@@ -28,45 +25,41 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
 	bblanchon/ArduinoJson@^6.19.4
+board_build.partitions = min_spiffs.csv
+build_flags = 
+	-D MCP2515_INT=17
+	-D MCP2515_CS=5
+	-D MQTT_MAX_PACKET_SIZE=1024
+
+; User Defined Vars
+[custom]
+upload_protocol = espota
+upload_port = 10.0.1.54
+
+[env:development]
+build_flags = 
+	${env.build_flags}
+	-D ENV=${this.__env__}
+	-D MUTE_MQTT=1
 
 [env:development_ota]
-platform = ${env:development.platform}
-board = ${env:development.board}
-framework = ${env:development.framework}
-upload_protocol = espota
-upload_port = 10.0.0.6
-build_flags = ${env:development.build_flags} 
-board_build.partitions = ${env:development.board_build.partitions} 
-lib_deps = ${env:development.lib_deps}
+upload_protocol = ${custom.upload_protocol}
+upload_port = ${custom.upload_port}
+monitor_port = socket://${custom.upload_port}:23
+build_flags = ${env:development.build_flags}
 
 [env:development_usb]
-platform = ${env:development.platform} 
-board = ${env:development.board} 
-framework = ${env:development.framework} 
 upload_port = /dev/ttyUSB0
-build_flags = ${env:development.build_flags} 
-board_build.partitions = ${env:development.board_build.partitions} 
-lib_deps = ${env:development.lib_deps} 
+build_flags = ${env:development.build_flags}
 
 [env:production]
-platform = ${env:development.platform}
-board = ${env:development.board}
-framework = ${env:development.framework}
-monitor_speed = 115200
-monitor_raw = yes
 build_flags = 
-	-D MCP2515_INT=17 
-	-D MCP2515_CS=5
-	-D MQTT_MAX_PACKET_SIZE=1024 
-board_build.partitions = ${env:development.board_build.partitions} 
-lib_deps = ${env:development.lib_deps}
+	${env.build_flags}
+	-D ENV=${this.__env__}
 
 [env:production_ota]
-platform = ${env:development.platform}
-board = ${env:development.board}
-framework = ${env:development.framework}
-upload_protocol = espota
-upload_port = 10.0.0.6
-build_flags = ${env:production.build_flags}
-board_build.partitions = ${env:development.board_build.partitions} 
-lib_deps = ${env:development.lib_deps}
+upload_protocol = ${custom.upload_protocol}
+upload_port = ${custom.upload_port}
+monitor_port = socket://${custom.upload_port}:23
+build_flags = 
+	${env:production.build_flags}
